# pydaconf-plugins-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_package}}/: __init__.py  {{cookiecutter.plugin_name.lower()}}.py
